<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="media" translatable="false">Медиатека</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="dark_mode" translatable="false">Темная тема</string>
    <string name="is_need_to_share" translatable="false">Поделиться приложением?</string>
    <string name="support" translatable="false">Написать в поддержку</string>
    <string name="agreement" translatable="false">Пользовательское соглашение</string>

    <string name="practicum_offer" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="email" translatable="false">skorova.k@yandex.ru</string>
    <string name="email_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="course_link" translatable="false">https://practicum.yandex.ru/android-developer/</string>

    <string name="nothing_found" translatable="false">Ничего не нашлось</string>
    <string name="connection_problem" translatable="false">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update" translatable="false">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="zero_time">0:00</string>
    <string name="track_time_mills">Длительность</string>
    <string name="collection_name">Альбом</string>
    <string name="release_year">Год</string>
    <string name="primary_genre_name">Жанр</string>
    <string name="country">Страна</string>

    <string name="default_zero_time">0:00</string>

    <string name="empty_favorite_tracks">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="hint_for_playlist_name_field">Название*</string>
    <string name="hint_for_playlist_description_field">Описание</string>
    <string name="create">Создать</string>
    <string name="required_field">Это поле обязательно для заполнения"</string>
    <string name="complete_playlist_creation">Завершить создание плейлиста?</string>
    <string name="all_unsafe_data_will_lost">Все несохраненные данные будут потеряны</string>
    <string name="complete">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="share">Поделиться</string>
    <string name="editInfo">Редактировать информацию</string>
    <string name="deletePlaylist">Удалить плейлист</string>
    <string name="defaultDuration">0 минут</string>
    <string name="save">Сохранить</string>
</resources>