<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/otherActivityColor"
    android:orientation="vertical"
    tools:context="com.practicum.playlistmaker.ui.settings.fragment.SettingsFragment">

    <TextView
        android:id="@+id/back_from_settings"
        style="@style/activityHeader"
        android:layout_marginBottom="@dimen/top_margin_for_settings_activity_layout"
        android:text="@string/settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/listElementForSettingsActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        android:trackTintMode="src_over"
        app:thumbTint="@color/thumb_style"
        app:trackTint="@color/track_style" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/button_share"
        style="@style/listElementForSettingsActivity"
        android:drawableEnd="@drawable/ic_share"
        android:text="@string/is_need_to_share" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/button_support"
        style="@style/listElementForSettingsActivity"
        android:drawableEnd="@drawable/ic_support"
        android:text="@string/support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/button_userGuide"
        style="@style/listElementForSettingsActivity"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:text="@string/agreement" />
</LinearLayout>