<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_page_color"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/horizontal_indent_for_main_activity"
        android:paddingVertical="@dimen/vertical_padding_for_main_activity_title"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_for_titles" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/horizontal_indent_for_main_activity"
        android:layout_marginTop="@dimen/top_margin_for_main_activity_button_layout"
        android:layout_marginBottom="@dimen/bottom_margin_for_main_activity_button_layout"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/seach"
            style="@style/buttonStyle"
            android:text="@string/search"
            app:icon="@drawable/ic_search" />

        <Button
            android:id="@+id/mediafiles"
            style="@style/buttonStyle"
            android:text="@string/media"
            app:icon="@drawable/ic_music" />

        <Button
            android:id="@+id/settings"
            style="@style/buttonStyle"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings" />
    </LinearLayout>
</LinearLayout>