<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/top_margin_for_settings_activity_layout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/back_from_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_back"
            android:drawablePadding="@dimen/icon_padding_for_settings_activity_title"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="fill"
            android:padding="@dimen/padding_for_settings_activity_title"
            android:text="@string/settings"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/text_size_for_titles" />
    </LinearLayout>

    <Switch
        android:id="@+id/themeSwitcher"
        style="@style/listElementForSettingsActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        android:textSize="@dimen/text_size" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/listElementForSettingsActivity"
            android:text="@string/is_need_to_share" />

        <ImageButton
            style="@style/imageButtonForSettingsActivity"
            android:src="@drawable/ic_share" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/listElementForSettingsActivity"
            android:text="@string/support" />

        <ImageButton
            style="@style/imageButtonForSettingsActivity"
            android:src="@drawable/ic_support" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/listElementForSettingsActivity"
            android:text="@string/agreement" />

        <ImageButton
            style="@style/imageButtonForSettingsActivity"
            android:src="@drawable/ic_arrow_forward" />
    </FrameLayout>
</LinearLayout>