<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/main_vertical_guideline_for_player_activity" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/main_vertical_guideline_for_player_activity" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_additional_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/additional_vertical_guideline_for_player_activity" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_additional_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/additional_vertical_guideline_for_player_activity" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/horizontal_start_guideline_for_player_activity" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_middle_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/horizontal_middle_guideline_for_player_activity" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/horizontal_end_guideline_for_player_activity" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/back_from_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="?attr/returnBackDrawableColor" />

    <ImageView
        android:id="@+id/cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_bottom_for_player_activity_image"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/track"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/back_from_player"
        app:srcCompat="@drawable/track_placeholder" />

    <TextView
        android:id="@+id/track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_for_player_activity_track_title"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/otherActivityHeaderColor"
        android:textSize="@dimen/text_size_for_titles"
        app:layout_constraintBottom_toTopOf="@+id/author"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        tools:text="Track Name" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/otherActivityHeaderColor"
        android:textSize="@dimen/text_size_for_player_activity_track_info"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_start_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        tools:text="Track author" />

    <ImageButton
        android:id="@+id/addButton"
        style="@style/playerButton"
        android:src="?attr/addIcon"
        app:layout_constraintBottom_toTopOf="@id/horizontal_middle_guideline"
        app:layout_constraintEnd_toStartOf="@+id/playButton"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/left_guideline" />

    <ImageButton
        android:id="@+id/playButton"
        style="@style/playerButton"
        android:layout_marginBottom="@dimen/margin_bottom_for_player_activity_play_button"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toTopOf="@id/horizontal_middle_guideline"
        app:layout_constraintEnd_toStartOf="@+id/addToFav"
        app:layout_constraintStart_toEndOf="@+id/addButton" />

    <ImageButton
        android:id="@+id/addToFav"
        style="@style/playerButton"
        android:src="?attr/addToFavoriteIcon"
        app:layout_constraintBottom_toTopOf="@id/horizontal_middle_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toEndOf="@+id/playButton" />

    <TextView
        android:id="@+id/trackTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/zero_time"
        android:textColor="?attr/otherActivityHeaderColor"
        android:textSize="@dimen/text_size_for_player_activity_track_info"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_middle_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playButton" />

    <TextView
        android:id="@+id/trackTimeMillsTitle"
        style="@style/trackAttributesTextView"
        android:layout_marginTop="@dimen/margin_top_for_player_activity_track_additional_info"
        android:text="@string/track_time_mills"
        app:layout_constraintBottom_toTopOf="@id/collectionNameTitle"
        app:layout_constraintStart_toStartOf="@+id/left_additional_guideline"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_middle_guideline"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/collectionNameTitle"
        style="@style/trackAttributesTextView"
        android:text="@string/collection_name"
        app:layout_constraintBottom_toTopOf="@id/releaseDateTitle"
        app:layout_constraintStart_toStartOf="@+id/left_additional_guideline"
        app:layout_constraintTop_toBottomOf="@+id/trackTimeMillsTitle" />

    <TextView
        android:id="@+id/releaseDateTitle"
        style="@style/trackAttributesTextView"
        android:text="@string/release_year"
        app:layout_constraintBottom_toTopOf="@id/primaryGenreNameTitle"
        app:layout_constraintStart_toStartOf="@+id/left_additional_guideline"
        app:layout_constraintTop_toBottomOf="@+id/collectionNameTitle" />

    <TextView
        android:id="@+id/primaryGenreNameTitle"
        style="@style/trackAttributesTextView"
        android:text="@string/primary_genre_name"
        app:layout_constraintBottom_toTopOf="@id/countryTitle"
        app:layout_constraintStart_toStartOf="@+id/left_additional_guideline"
        app:layout_constraintTop_toBottomOf="@+id/releaseDateTitle" />

    <TextView
        android:id="@+id/countryTitle"
        style="@style/trackAttributesTextView"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="@+id/horizontal_end_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_additional_guideline"
        app:layout_constraintTop_toBottomOf="@+id/primaryGenreNameTitle" />

    <TextView
        android:id="@+id/trackTimeMills"
        style="@style/trackInfoTextView"
        android:layout_marginTop="@dimen/margin_top_for_player_activity_track_additional_info"
        app:layout_constraintBottom_toTopOf="@id/collectionName"
        app:layout_constraintEnd_toStartOf="@+id/right_additional_guideline"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_middle_guideline"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:text="Track duration" />

    <TextView
        android:id="@+id/collectionName"
        style="@style/trackInfoTextView"
        app:layout_constraintBottom_toTopOf="@id/releaseDate"
        app:layout_constraintEnd_toStartOf="@+id/right_additional_guideline"
        app:layout_constraintTop_toBottomOf="@+id/trackTimeMills"
        tools:text="Track collection name" />

    <TextView
        android:id="@+id/releaseDate"
        style="@style/trackInfoTextView"
        app:layout_constraintBottom_toTopOf="@id/primaryGenreName"
        app:layout_constraintEnd_toStartOf="@+id/right_additional_guideline"
        app:layout_constraintTop_toBottomOf="@+id/collectionName"
        tools:text="Track year" />

    <TextView
        android:id="@+id/primaryGenreName"
        style="@style/trackInfoTextView"
        app:layout_constraintBottom_toTopOf="@id/country"
        app:layout_constraintEnd_toStartOf="@+id/right_additional_guideline"
        app:layout_constraintTop_toBottomOf="@+id/releaseDate"
        tools:text="Track genre name" />

    <TextView
        android:id="@+id/country"
        style="@style/trackInfoTextView"
        app:layout_constraintBottom_toBottomOf="@+id/horizontal_end_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_additional_guideline"
        app:layout_constraintTop_toBottomOf="@+id/primaryGenreName"
        tools:text="Track country" />

</androidx.constraintlayout.widget.ConstraintLayout>